force-app/main/default/objects/Extole_Report_Config__c/Extole_Report_Config__c.object-meta.xml
<CustomObject>
    <label>Extole Report Config</label>
    <nameField>
        <label>Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Extole Report Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>