force-app/main/default/objects/Extole_Report_Config__c/fields/Aggregation__c.field-meta.xml
<CustomField>
    <fullName>Aggregation__c</fullName>
    <label>Aggregation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FIRST_ROW</fullName>
                <default>true</default>
                <label>FIRST_ROW</label>
            </value>
            <value>
                <fullName>SUM</fullName>
            </value>
            <value>
                <fullName>COUNT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>