force-app/main/default/objects/Extole_Report_Config__c/fields/Chart_Type__c.field-meta.xml
<CustomField>
    <fullName>Chart_Type__c</fullName>
    <label>Chart Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Sparkline</fullName>
            </value>
            <value>
                <fullName>Bar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>