force-app/main/default/objects/Extole_Report_Config__c/fields/Comparison_Period__c.field-meta.xml
<CustomField>
    <fullName>Comparison_Period__c</fullName>
    <label>Comparison Period</label>
    <description>How far back to look for the prior-period value that drives trend arrows on dashboard tiles.</description>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>7 days</fullName>
            </value>
            <value>
                <fullName>14 days</fullName>
            </value>
            <value>
                <fullName>30 days</fullName>
                <default>true</default>
                <label>30 days</label>
            </value>
            <value>
                <fullName>90 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>