force-app/main/default/objects/Extole_Report_Config__c/fields/Data_Mode__c.field-meta.xml
<CustomField>
    <fullName>Data_Mode__c</fullName>
    <label>Data Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single Value</fullName>
                <default>true</default>
                <label>Single Value</label>
            </value>
            <value>
                <fullName>Time Series</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>