force-app/main/default/objects/Extole_Report_Config__c/fields/Date_Range__c.field-meta.xml
<CustomField>
    <fullName>Date_Range__c</fullName>
    <label>Date Range</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rolling 30</fullName>
            </value>
            <value>
                <fullName>Rolling 90</fullName>
                <default>true</default>
                <label>Rolling 90</label>
            </value>
            <value>
                <fullName>YTD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>