force-app/main/default/objects/Extole_Report_Config__c/fields/Display_Label__c.field-meta.xml
<CustomField>
    <fullName>Display_Label__c</fullName>
    <label>Display Label</label>
    <type>Text</type>
    <length>120</length>
</CustomField>