force-app/main/default/objects/Extole_Report_Config__c/fields/Parameter_Overrides_JSON__c.field-meta.xml
<CustomField>
    <fullName>Parameter_Overrides_JSON__c</fullName>
    <label>Parameter Overrides JSON</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>