force-app/main/default/objects/Extole_Report_Config__c/fields/Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Report_Type__c</fullName>
    <label>Report Type</label>
    <type>Text</type>
    <length>50</length>
</CustomField>