force-app/main/default/objects/Extole_Report_Config__c/fields/Value_Column__c.field-meta.xml
<CustomField>
    <fullName>Value_Column__c</fullName>
    <label>Value Column</label>
    <type>Text</type>
    <length>255</length>
</CustomField>